src/objects/Tier__c.object
<CustomObject>
    <fields>
        <fullName>City_Percentage__c</fullName>
        <formula>if( and( ispickval(Tier__c, &quot;1&quot;),  RAI_Risk_Level__c = &quot;High&quot;), 0, 1- OCFS_Percentage__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tier Changes</relationshipLabel>
        <relationshipName>Tiers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Tier_Formula__c</fullName>
        <formula>Program_Cycle__r.Most_Recent_Tier__c = Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Most Recent Tier?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Tier__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Most Recent Tier?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OCFS_Percentage__c</fullName>
        <formula>Case( text(Tier__c),
&quot;1&quot;, 0,
&quot;2&quot;, Case(  RAI_Risk_Level__c, &quot;Low&quot;, 0.4, &quot;Medium&quot;, 0.4, &quot;High&quot;, 1, 0),
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OCFS Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Program_Cycle__c</fullName>
        <label>Program Cycle</label>
        <referenceTo>Program_Cycle__c</referenceTo>
        <relationshipLabel>Tiers</relationshipLabel>
        <relationshipName>Tiers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RAI_Risk_Level__c</fullName>
        <label>RAI Risk Level</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Tier_Change__c</fullName>
        <label>Reason for Tier Change</label>
        <picklist>
            <picklistValues>
                <fullName>Program</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Judge&apos;s request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intake Tier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120 Days in Cycle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tier_Number__c</fullName>
        <description>Used in the roll-up field &quot;Current Tier&quot; on Program Cycle, since the picklist field &apos;Tier&quot; that handles user input can&apos;t be rolled up.</description>
        <formula>value(right(text(Tier__c),1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier Number (Admin)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <description>Supervision Level</description>
        <inlineHelpText>for SRP this is called Supervision Level</inlineHelpText>
        <label>Tier</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Today__c</fullName>
        <label>Today</label>
        <type>Date</type>
    </fields>
    <label>Tier</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TR-{00000}</displayFormat>
        <label>Tier Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tiers</pluralLabel>
    <recordTypes>
        <fullName>Choices_Tier</fullName>
        <active>true</active>
        <description>Tiers for Choices clients</description>
        <label>Choices Tier</label>
    </recordTypes>
    <recordTypes>
        <fullName>Supervised_Release_Tier</fullName>
        <active>true</active>
        <description>Supervision Level tracking for SR</description>
        <label>SR Tier</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>